test/refactor: 유저, 게시물 테스트 코드 수정