@@ -1,37 +1,27 @@
 package com.example.news_feed.user.controller;
 
 import com.example.news_feed.auth.security.UserDetailsImpl;
-import com.example.news_feed.auth.security.UserDetailsServiceImpl;
 import com.example.news_feed.user.dto.request.LoginReqDto;
 import com.example.news_feed.user.dto.request.SignupReqDto;
 import com.example.news_feed.user.repository.UserRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
-import org.aspectj.lang.annotation.Before;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.jdbc.EmbeddedDatabaseConnection;
-import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.TestingAuthenticationToken;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.MvcResult;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.Objects;
 
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -39,8 +29,8 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-@AutoConfigureTestDatabase(connection = EmbeddedDatabaseConnection.H2, replace = AutoConfigureTestDatabase.Replace.ANY)
 @TestPropertySource("classpath:application-test.yml")
+@ActiveProfiles("test")
 @SpringBootTest
 @AutoConfigureMockMvc
 class UserApiControllerTest {
@@ -51,13 +41,17 @@ class UserApiControllerTest {
     @Autowired
     MockMvc mvc;
 
+    @Autowired
+    UserRepository userRepository;
+
     private Authentication authentication;
 
-//    @BeforeEach
-//    void setup() {
-//        UserDetails userDetails = new UserDetailsImpl(2L, "admin@gmail.com", "awsedr12!", "admin", Arrays.asList(new SimpleGrantedAuthority("ROLE_ADMIN")));
-//        authentication = new TestingAuthenticationToken(userDetails, null, userDetails.getAuthorities());
-//    }
+    @BeforeEach
+    void setup() {
+        // Spring Security 인증 객체 생성
+        UserDetails userDetails = new UserDetailsImpl(1L, "jidong@gmail.com", "awsedr12!", "jidong", List.of(new SimpleGrantedAuthority("ROLE_USER")));
+        authentication = new TestingAuthenticationToken(userDetails, null, userDetails.getAuthorities());
+    }
 
     @Nested
     @DisplayName("signup")
@@ -67,8 +61,8 @@ class UserApiControllerTest {
         void signup_ok() throws Exception {
 
             // given
-            String username = "newtest";
-            String email = "newtest@gmail.com";
+            String username = "newnew";
+            String email = "newnew@gmail.com";
             String pwd = "newsfeed12!";
 
             // when(객체 변환)
@@ -86,17 +80,18 @@ class UserApiControllerTest {
                             .contentType(MediaType.APPLICATION_JSON) // 타입 명시
                     )
                     .andExpect(status().isCreated())
-                    .andExpect(jsonPath("$.statusCode").value(200))
+                    .andExpect(jsonPath("$.statusCode").value(201))
                     .andExpect(jsonPath("$.message").value("회원 가입 완료"));
         }
 
         @Test
         @Transactional
         void signup_fail_invalid_pwd() throws Exception {
+
             // given
-            String username = "testname2";
-            String email = "test2@gmail.com";
-            String pwd = "newsfeed";
+            String username = "user";
+            String email = "user@gmail.com";
+            String pwd = "newsfeed12";
 
             // when
             String body = mapper.writeValueAsString(
@@ -121,16 +116,13 @@ class UserApiControllerTest {
         @Transactional
         void signup_fail_duplicated_email() throws Exception {
             // given
-            String username = "admin23";
-            String email = "admin@gmail.com";
-            String pwd = "asdf1234!";
 
             // when
             String body = mapper.writeValueAsString(
                     SignupReqDto.builder()
-                            .username(username)
-                            .email(email)
-                            .pwd(pwd)
+                            .username("newnew")
+                            .email("jidong@gmail.com")
+                            .pwd("asdf1234!")
                             .build()
             );
 
@@ -151,9 +143,8 @@ class UserApiControllerTest {
         @Test
         @Transactional
         void login_ok() throws Exception {
-
             // given
-            String email = "admin@gmail.com";
+            String email = "jidong@gmail.com";
             String pwd = "awsedr12!";
 
             // when
@@ -170,15 +161,17 @@ class UserApiControllerTest {
                             .contentType(MediaType.APPLICATION_JSON)
                     )
                     .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.email").value(email))
+                    .andExpect(jsonPath("$.username").value("jidong"))
+                    .andExpect(jsonPath("$.role").value("USER"))
                     .andDo(print());
-
         }
 
         @Test
         @Transactional
-        void login_fail_not_fount_user() throws Exception {
+        void login_fail_not_found_user() throws Exception {
             // given
-            String email = "newuser@gmail.com";
+            String email = "user123@gmail.com";
             String pwd = "awsedr12!";
 
             // when
@@ -203,7 +196,7 @@ class UserApiControllerTest {
         @Transactional
         void login_invalid_user() throws Exception {
             // given
-            String email = "user@gmail.com";
+            String email = "deleted@gmail.com";
             String pwd = "awsedr12!";
 
             // when
@@ -228,8 +221,8 @@ class UserApiControllerTest {
         @Transactional
         void login_missMatch_pwd() throws Exception {
             // given
-            String email = "admin@gmail.com";
-            String pwd = "awsedr123!";
+            String email = "jidong@gmail.com";
+            String pwd = "awsedr1234!";
 
             // when
             String body = mapper.writeValueAsString(
@@ -252,13 +245,17 @@ class UserApiControllerTest {
 
     @Nested
     @DisplayName("logout")
-    class Logout{
+    class logout {
+
         @Test
         @Transactional
-        void logout_ok () throws Exception {
-            // 실제 토큰값 넣기
-            String accessToken = "";
-            String refreshToken = "";
+        void logout_ok() throws Exception {
+            // given
+            MvcResult loginResult = login_ok_sample();
+
+            // 로그인 응답에서 토큰 추출
+            String accessToken = Objects.requireNonNull(loginResult.getResponse().getHeader("Authorization")).substring("Bearer ".length());
+            String refreshToken = loginResult.getResponse().getHeader("Refresh");
 
             // then
             mvc.perform(post("/user/logout")
@@ -272,14 +269,21 @@ class UserApiControllerTest {
                     .andExpect(jsonPath("$.message").value("로그아웃 완료!"))
                     .andDo(print());
         }
+
         @Test
         @Transactional
-        void logout_fail_already_logout () throws Exception {
-            // 실제 토큰값 넣기
-            String accessToken = "";
-            String refreshToken = "";
+        void logout_fail_already_logout() throws Exception {
+            // given
+            MvcResult loginResult = login_ok_sample();
 
-            // then
+            // 로그인 응답에서 토큰 추출
+            String accessToken = Objects.requireNonNull(loginResult.getResponse().getHeader("Authorization")).substring("Bearer ".length());
+            String refreshToken = loginResult.getResponse().getHeader("Refresh");
+
+            // 1차 로그아웃
+            logout_ok();
+
+            // then(2차 로그아웃)
             mvc.perform(post("/user/logout")
                             .header("Authorization", "Bearer " + accessToken)
                             .header("Refresh", refreshToken)
@@ -290,27 +294,53 @@ class UserApiControllerTest {
                     .andExpect(jsonPath("$.statusCode").value(400))
                     .andExpect(jsonPath("$.message").value("이미 로그아웃하셨습니다."));
         }
+
+        private MvcResult login_ok_sample() throws Exception {
+            // given
+            String email = "jidong@gmail.com";
+            String pwd = "awsedr12!";
+
+            // when
+            String body = mapper.writeValueAsString(
+                    LoginReqDto.builder()
+                            .email(email)
+                            .pwd(pwd)
+                            .build()
+            );
+
+            // then
+            return mvc.perform(post("/user/login")
+                            .content(body)
+                            .contentType(MediaType.APPLICATION_JSON)
+                    )
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.email").value(email))
+                    .andExpect(jsonPath("$.username").value("jidong"))
+                    .andExpect(jsonPath("$.role").value("USER"))
+                    .andDo(print())
+                    .andReturn();
+        }
     }
 
     @Nested
     @DisplayName("UserList")
     class UserList {
+
         @Test
+        @Transactional
         void all_user_list_ok() throws Exception{
             // then
             mvc.perform(get("/user/list")
                             .contentType(MediaType.APPLICATION_JSON)
                             .with(authentication(authentication))
                     )
-                    .andExpect(status().isOk())
-                    .andDo(print());
+                    .andExpect(status().isOk());
         }
-
         @Test
+        @Transactional
         void search_user_ok() throws Exception{
-            String username = "ad";
+            String username = "jieun";
 
-            // then
             mvc.perform(get("/user/search")
                             .param("username", username) // 쿼리 매개변수로 전달
                             .contentType(MediaType.APPLICATION_JSON)
@@ -319,12 +349,11 @@ class UserApiControllerTest {
                     .andExpect(status().isOk())
                     .andDo(print());
         }
-
         @Test
+        @Transactional
         void search_user_fail_not_fount_user() throws Exception{
             String username = "useruser";
 
-            // then
             mvc.perform(get("/user/search")
                             .param("username", username) // 쿼리 매개변수로 전달
                             .contentType(MediaType.APPLICATION_JSON)
